[#232, #256] Add transparent border to prevent flickering on radio & checkbox

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -34,6 +34,8 @@ h4 {
   .ant-input,
   .ant-input-number-input,
   .ant-picker,
+  span.ant-radio,
+  span.ant-checkbox,
   .ant-select:not(.ant-select-customize-input) .ant-select-selector {
     border: 2px transparent solid;
     border-radius: 2px;
